# learn-agentic-AI

./: README.md
01_ai_agents_first/00_swarm/: readme.md
01_ai_agents_first/01_uv/01_project/explore-uv/: pyproject.toml
01_ai_agents_first/01_uv/01_project/explore-uv/src/explore_uv/: hello.py
01_ai_agents_first/01_uv/uv-project2/uv-project2/: pyproject.toml
01_ai_agents_first/01_uv/uv-project2/uv-project2/src/uv_project2/: main.py
01_ai_agents_first/02_openrouter/: README.md
01_ai_agents_first/02_openrouter/open_router/: .env  main.py  pyproject.toml
01_ai_agents_first/03_litellm_openai_agent/01_litellm/myproject/: .env  pyproject.toml
01_ai_agents_first/03_litellm_openai_agent/02_uv_litellm_chainlit/chatbot/: .env  chat_history.json  main.py  pyproject.toml
01_ai_agents_first/04_hello_agent/sync/hello_agent/: pyproject.toml
01_ai_agents_first/05_chainlit/helloworld/: README.md
