[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Repo-Rani", email = "ranimiss968@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.72.0",
    "openai-agents>=0.0.17",
]

[project.scripts]
myproject = "myproject:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
